TAG: curatorbulkindexload-6-0-22-1
DATE: 09/07/2023
STAFF: lec
wts2-1248/Bulk index associations (allele, marker, strain)