@@ -169,6 +169,7 @@ def verifyObject(
     assocTypeKey = 0
 
     results = db.sql('''
+    -- Marker (2)
     select a._object_key, a._mgitype_key 
     from ACC_Accession  a, MRK_Marker aa
     where a._logicaldb_key = 1
@@ -178,6 +179,7 @@ def verifyObject(
     and a._object_key = aa._Marker_key
     and aa._marker_status_key = 1
     union
+    -- Strain (10)
     select a._object_key, a._mgitype_key 
     from ACC_Accession a, PRB_Strain aa
     where a._logicaldb_key = 1
@@ -187,6 +189,7 @@ def verifyObject(
     and a._object_key = aa._strain_key
     and aa.private = 0
     union
+    -- Allele (11)
     select a._object_key, a._mgitype_key 
     from ACC_Accession a, ALL_Allele aa
     where a._logicaldb_key = 1
@@ -196,6 +199,7 @@ def verifyObject(
     and a._object_key = aa._allele_key
     and aa._allele_status_key in (847114, 3983021)
     union
+    -- DOIID (ldb=191, mgitype=13)
     select a._object_key, a._mgitype_key 
     from ACC_Accession a, VOC_Term aa
     where a._logicaldb_key = 191
@@ -275,6 +279,8 @@ def processFile():
             hasFatalError += 1
             continue
 
+        if not jnumid.startswith('J:'):
+                jnumid = 'J:' + jnumid
         refKey = loadlib.verifyReference(jnumid, lineNum, errorFile)
         createdByKey = loadlib.verifyUser(createdBy, lineNum, errorFile)
         objectKey, mgiTypeKey, assocTypeKey = verifyObject(mgiid, lineNum)
