@@ -1,3 +1,8 @@
+TAG: curatorbulkindexload-6-0-22-2
+DATE: 09/25/2023
+STAFF: lec
+wts2-393/Disease to reference annotation
+
 TAG: curatorbulkindexload-6-0-22-1
 DATE: 09/07/2023
 STAFF: lec
